Bug 172397 - Layout Test animations/needs-layout.html is a flaky Image Failure.
Summary: Layout Test animations/needs-layout.html is a flaky Image Failure.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Antoine Quint
URL:
Keywords: InRadar
: 184638 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-05-19 16:00 PDT by Matt Lewis
Modified: 2018-04-17 00:35 PDT (History)
9 users (show)

See Also:


Attachments
Patch (11.28 KB, patch)
2018-04-16 15:47 PDT, Antoine Quint
dino: review+
ews-watchlist: commit-queue-
Details | Formatted Diff | Diff
Archive of layout-test-results from ews116 for mac-sierra (2.99 MB, application/zip)
2018-04-16 17:22 PDT, EWS Watchlist
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matt Lewis 2017-05-19 16:00:39 PDT
The test animations/needs-layout.html is a flaky image failure on macOS Sierra. It has failed on WK1 release and WK2 Debug.

The test seems to have been flaky from when it was added.
https://trac.webkit.org/changeset/217075/webkit

https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=animations%2Fneeds-layout.html

https://build.webkit.org/builders/Apple%20Sierra%20Debug%20WK2%20(Tests)/builds/1103
https://build.webkit.org/results/Apple%20Sierra%20Debug%20WK2%20(Tests)/r217140%20(1103)/results.html

I was able to reproduce the failure in Sierra debug with:
run-webkit-tests animations/needs-layout.html --debug --no-retry-failure --iterations=50 -f
Comment 1 Alexey Proskuryakov 2017-05-24 16:46:01 PDT
This is a new test, just added in bug 172300. Dean, can you take a look please?
Comment 2 Matt Lewis 2017-07-05 16:45:06 PDT
Marked test as flaky:
https://trac.webkit.org/changeset/219166/webkit
Comment 4 Matt Lewis 2017-10-31 12:55:17 PDT
Adjusted Expectations: 
https://trac.webkit.org/changeset/224239/webkit
Comment 5 Ryan Haddad 2018-04-13 16:52:43 PDT
This test is now flaky on release, too.
Comment 6 Antoine Quint 2018-04-16 15:47:34 PDT
Created attachment 338050 [details]
Patch
Comment 7 EWS Watchlist 2018-04-16 17:22:58 PDT
Comment on attachment 338050 [details]
Patch

Attachment 338050 [details] did not pass mac-debug-ews (mac):
Output: http://webkit-queues.webkit.org/results/7336578

New failing tests:
legacy-animation-engine/css3/masking/clip-path-animation.html
Comment 8 EWS Watchlist 2018-04-16 17:22:59 PDT
Created attachment 338064 [details]
Archive of layout-test-results from ews116 for mac-sierra

The attached test failures were seen while running run-webkit-tests on the mac-debug-ews.
Bot: ews116  Port: mac-sierra  Platform: Mac OS X 10.12.6
Comment 9 Antoine Quint 2018-04-17 00:31:44 PDT
(In reply to Build Bot from comment #7)
> Comment on attachment 338050 [details]
> Patch
> 
> Attachment 338050 [details] did not pass mac-debug-ews (mac):
> Output: http://webkit-queues.webkit.org/results/7336578
> 
> New failing tests:
> legacy-animation-engine/css3/masking/clip-path-animation.html

This crash should not be related to this patch which only affects the code path used for the new animation engine. This test uses the legacy animation engine and the ASSERT reached in FrameView is conditioned to only run on the legacy code path, so we are indeed not using the new one.
Comment 10 Antoine Quint 2018-04-17 00:34:07 PDT
Committed r230703: <https://trac.webkit.org/changeset/230703>
Comment 11 Antoine Quint 2018-04-17 00:34:07 PDT
*** Bug 184638 has been marked as a duplicate of this bug. ***
Comment 12 Radar WebKit Bug Importer 2018-04-17 00:35:19 PDT
<rdar://problem/39483712>